<?xml version="1.0"?>
<package format="3">
  <name>adns3080_ros2</name>
  <version>0.1.0</version>
  <description>ROS 2 publisher for ADNS3080 motion values</description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>MIT</license>

  <!-- Build system -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- ROS dependencies -->
  <depend>rclcpp</depend>
  <depend>adns3080_interfaces</depend>
  <depend>geometry_msgs</depend>
  
  <!-- System dependencies -->
  <build_depend>libbcm2835-dev</build_depend>
  <exec_depend>libbcm2835-dev</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
